--- a/package.json
+++ b/package.json
@@ -1,22 +1,38 @@
 {
   "name": "sc-next",
   "version": "0.1.0",
-  "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "preinstall": "npx only-allow pnpm",
+    "dev": "npm run rm-cache && next dev",
+    "build": "npm run rm-cache && next build && npm run purge-linaria-css",
+    "purge-linaria-css": "purgecss --css ./.next/static/css/*.css --content ./.next/**/*.{js,jsx,html} --output ./.next/static/css",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "rm-cache": "rimraf .next",
+    "depcheck": "depcheck"
   },
   "dependencies": {
+    "@linaria/babel-preset": "^4.4.5",
+    "@linaria/core": "^4.2.10",
+    "@linaria/react": "^4.3.8",
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
-    "next": "13.4.7",
+    "next": "latest",
+    "next-linaria": "1.0.1-beta",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^5.0.0",
+    "@linaria/webpack-loader": "^4.1.17",
+    "css-loader": "^6.8.1",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-loader": "^7.3.3",
+    "postcss-preset-env": "^8.5.1",
+    "rimraf": "^5.0.1"
   }
 }
